[package]
name = "acquire"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_repr = "0"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }